updated with new learning materials

--- a/landingPage/index.html
+++ b/landingPage/index.html
@@ -15,20 +15,21 @@
   </head>
   <body>
     <header>
-      <div>
-        <img class="sblogo" src="pictures/squarebear.jpg" alt="" />
-      </div>
-
-      <div>
-        <h1>My Journey</h1>
-      </div>
-
       <div id="navLinksHolder">
         <a class="topNavLinks" href="#" alt="">[ home ]</a>
         <a class="topNavLinks" href="#" alt="">[ soundcloud ]</a>
-        <a class="topNavLinks" href="#" alt="">[ contact ]</a>
+        <a class="topNavLinks" href="picturesPage/pictures.html" alt=""
+          >[ pictures ]</a
+        >
       </div>
     </header>
+    <!-- <div>
+      <img class="sblogo" src="pictures/squarebear.jpg" alt="" />
+    </div> -->
+    <div id="pagetitle">
+      <h1>My Journey</h1>
+      <p>to learn web development</p>
+    </div>
     <div class="mainContent">
       <section class="grow2">
         <h2>What got me interested</h2>
@@ -120,6 +121,7 @@
         </p>
       </section>
     </div>
+
     <div class="footerRoom"></div>
     <footer>
       <p class="footerText">
