--- a/musicNotes/index.html
+++ b/musicNotes/index.html
@@ -9,23 +9,23 @@
   </head>
   <body>
     <h1>Music Notes</h1>
-    <h2>for every scale</h2>
+    <h2>for every scale and mode</h2>
     <div id="selectorHolder">
       <p>
         Select Scale:
         <select name="selectScale" id="noteSelect">
-          <option value="C">C</option>
-          <option value="C#">C#</option>
-          <option value="D">D</option>
-          <option value="D#">D#</option>
-          <option value="E">E</option>
-          <option value="F">F</option>
-          <option value="F#">F#</option>
-          <option value="G">G</option>
-          <option value="G#">G#</option>
-          <option value="A">A</option>
-          <option value="A#">A#</option>
-          <option value="B">B</option>
+          <option value="0">C</option>
+          <option value="1">C#</option>
+          <option value="2">D</option>
+          <option value="3">D#</option>
+          <option value="4">E</option>
+          <option value="5">F</option>
+          <option value="6">F#</option>
+          <option value="7">G</option>
+          <option value="8">G#</option>
+          <option value="9">A</option>
+          <option value="10">A#</option>
+          <option value="11">B</option>
         </select>
       </p>
       <p>
@@ -40,6 +40,7 @@
           <option value="Locrian">Locrian</option>
         </select>
       </p>
+      <p><button id="getNotes" type="button">Get notes!</button></p>
     </div>
     <div id="scaleHolder"></div>
 
