adding in colors for chords

--- a/musicNotes/index.html
+++ b/musicNotes/index.html
@@ -42,7 +42,23 @@
       </p>
       <p><button id="getNotes" type="button">Get notes!</button></p>
     </div>
+
     <div id="scaleHolder"></div>
+    <div id="colorLegend">
+      <p>Hover to see!</p>
+      <div class="colorWords">
+        <div class="legendColors" id="greenLegend">Root</div>
+      </div>
+      <div class="colorWords">
+        <div class="legendColors" id="redLegend">Third</div>
+      </div>
+      <div class="colorWords">
+        <div class="legendColors" id="blueLegend">Fifth</div>
+      </div>
+      <div class="colorWords">
+        <div class="legendColors" id="purpleLegend">Seventh</div>
+      </div>
+    </div>
 
     <script src="notesArray.js"></script>
     <script src="script.js"></script>
