--- a/musicNotes/index.html
+++ b/musicNotes/index.html
@@ -44,21 +44,50 @@
     </div>
 
     <div id="scaleHolder"></div>
-    <div id="colorLegend">
-      <p>Hover to see!</p>
-      <div class="colorWords">
-        <div class="legendColors" id="greenLegend">Root</div>
+    <div id="legendAndPianoHolder">
+      <div id="colorLegend">
+        <p>Hover to see!</p>
+        <div class="colorWords">
+          <div class="legendColors" id="greenLegend">Root</div>
+        </div>
+        <div class="colorWords">
+          <div class="legendColors" id="redLegend">Third</div>
+        </div>
+        <div class="colorWords">
+          <div class="legendColors" id="blueLegend">Fifth</div>
+        </div>
+        <div class="colorWords">
+          <div class="legendColors" id="purpleLegend">Seventh</div>
+        </div>
       </div>
-      <div class="colorWords">
-        <div class="legendColors" id="redLegend">Third</div>
-      </div>
-      <div class="colorWords">
-        <div class="legendColors" id="blueLegend">Fifth</div>
-      </div>
-      <div class="colorWords">
-        <div class="legendColors" id="purpleLegend">Seventh</div>
+      <div id="pianoContainer">
+        <div data-note="C" class="key white"></div>
+        <div data-note="Db" class="key black"></div>
+        <div data-note="D" class="key white"></div>
+        <div data-note="Eb" class="key black"></div>
+        <div data-note="E" class="key white"></div>
+        <div data-note="F" class="key white"></div>
+        <div data-note="Gb" class="key black"></div>
+        <div data-note="G" class="key white"></div>
+        <div data-note="Ab" class="key black"></div>
+        <div data-note="A" class="key white"></div>
+        <div data-note="Bb" class="key black"></div>
+        <div data-note="B" class="key white"></div>
       </div>
     </div>
+
+    <audio id="C" src="notes/C.mp3"></audio>
+    <audio id="Db" src="notes/Db.mp3"></audio>
+    <audio id="D" src="notes/D.mp3"></audio>
+    <audio id="Eb" src="notes/Eb.mp3"></audio>
+    <audio id="E" src="notes/E.mp3"></audio>
+    <audio id="F" src="notes/F.mp3"></audio>
+    <audio id="Gb" src="notes/Gb.mp3"></audio>
+    <audio id="G" src="notes/G.mp3"></audio>
+    <audio id="Ab" src="notes/Ab.mp3"></audio>
+    <audio id="A" src="notes/A.mp3"></audio>
+    <audio id="Bb" src="notes/Bb.mp3"></audio>
+    <audio id="B" src="notes/B.mp3"></audio>
 
     <script src="notesArray.js"></script>
     <script src="script.js"></script>
